feat(KSTIP-1134): adressed sonarqube complaints